codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_action_menu.snap
---
source: tui/src/keymap_setup.rs
expression: snapshot
---
unbound:
设置按键 | 为此未绑定操作捕获一个按键。 | enabled
设置组合键 | 为此操作捕获两个连续按键。 | enabled
移除自定义绑定 | 恢复默认按键映射绑定。 | enabled
返回快捷键列表 | 返回快捷键列表。 | enabled

single:
替换绑定 | 捕获按键以替换 `ctrl-enter`。 | enabled
添加备用绑定 | 保留 `ctrl-enter` 并添加另一个按键。 | enabled
替换为组合键 | 用两键组合替换 `ctrl-enter`。 | enabled
添加备用组合键 | 保留 `ctrl-enter` 并添加两键组合。 | enabled
移除自定义绑定 | 恢复默认按键映射绑定。 | enabled
返回快捷键列表 | 返回快捷键列表。 | enabled

multi:
替换一个绑定…… | 选择要替换的现有绑定。 | enabled
替换所有绑定 | 用一个按键替换 `ctrl-enter, alt-shift-enter`。 | enabled
添加备用绑定 | 保留 `ctrl-enter, alt-shift-enter` 并添加另一个按键。 | enabled
替换为组合键 | 用两键组合替换 `ctrl-enter, alt-shift-enter`。 | enabled
添加备用组合键 | 保留 `ctrl-enter, alt-shift-enter` 并添加两键组合。 | enabled
移除自定义绑定 | 恢复默认按键映射绑定。 | enabled
返回快捷键列表 | 返回快捷键列表。 | enabled

replace picker:
ctrl-enter | 用另一个按键替换 `ctrl-enter`。 | enabled
ctrl-enter（组合键） | 用两键组合替换 `ctrl-enter`。 | enabled
alt-shift-enter | 用另一个按键替换 `alt-shift-enter`。 | enabled
alt-shift-enter（组合键） | 用两键组合替换 `alt-shift-enter`。 | enabled
