codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: tui/src/keymap_setup.rs
expression: "render_debug(&view, 80)"
---
按 键 检 查 器
按 任 意 键 查 看  Codex 收 到 的 内 容 。 Esc 会 被 检 查 ； Ctrl+C 关 闭 。
提 示 ： Codex 只 能 检 查 终 端 实 际 发 送 的 按 键 。

正 在 等 待 按 键 ……
