codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_fast_mode_enabled.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  按 键 映 射
  所 有 可 配 置 快 捷 键 。
  共  148 个 操 作 ， 0 个 已 自 定 义 ， 6 个 未 绑 定 。

  [全 部 ]  常 用   已 自 定 义 （ 0）   未 绑 定 （ 6）   应 用   输 入 框   编 辑 器   Vim  导 航   智 能 体   审 批   调 试

  输 入 内 容 以 搜 索 快 捷 键
› 全 局          - 打 开 智 能 体 面 板         未 绑 定
  全 局            打 开 对 话 记 录           ctrl-t
  全 局            打 开 外 部 编 辑 器         ctrl-g
  全 局            复 制                   ctrl-o
  全 局            清 空 终 端               ctrl-l
  全 局          - 切 换  Vim 模 式          未 绑 定
  全 局          - toggle_fast_mode      未 绑 定
  全 局            切 换 原 始 输 出           alt-r

  left/right 分 组  · enter 编 辑 快 捷 键  · * 自 定 义  · - 未 绑 定  · esc 关 闭
