codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_first_actions.snap
---
source: tui/src/keymap_setup.rs
expression: snapshot
---
tab: 全部 (147 selectable)
tab: 常用 (20 selectable)
tab: 已自定义（0） (0 selectable)
tab: 未绑定（5） (5 selectable)
tab: 应用 (18 selectable)
tab: 输入框 (5 selectable)
tab: 编辑器 (17 selectable)
tab: Vim (69 selectable)
tab: 导航 (20 selectable)
tab: 智能体 (10 selectable)
tab: 审批 (8 selectable)
tab: 调试 (1 selectable)
打开智能体面板 | 未绑定 | 全局 open_agents 打开智能体面板 配置“打开智能体面板”操作的快捷键。 未绑定 默认
打开对话记录 | ctrl-t | 全局 open_transcript 打开对话记录 配置“打开对话记录”操作的快捷键。 ctrl-t 默认
打开外部编辑器 | ctrl-g | 全局 open_external_editor 打开外部编辑器 配置“打开外部编辑器”操作的快捷键。 ctrl-g 默认
复制 | ctrl-o | 全局 copy 复制 配置“复制”操作的快捷键。 ctrl-o 默认
清空终端 | ctrl-l | 全局 clear_terminal 清空终端 配置“清空终端”操作的快捷键。 ctrl-l 默认
切换 Vim 模式 | 未绑定 | 全局 toggle_vim_mode 切换 Vim 模式 配置“切换 Vim 模式”操作的快捷键。 未绑定 默认
切换原始输出 | alt-r | 全局 toggle_raw_output 切换原始输出 配置“切换原始输出”操作的快捷键。 alt-r 默认
切换侧边对话 | ctrl-/ | 全局 toggle_side_conversation 切换侧边对话 配置“切换侧边对话”操作的快捷键。 ctrl-/ 默认
中断当前轮次 | esc | 聊天 interrupt_turn 中断当前轮次 配置“中断当前轮次”操作的快捷键。 esc 默认
降低推理强度 | alt-,, shift-down | 聊天 decrease_reasoning_effort 降低推理强度 配置“降低推理强度”操作的快捷键。 alt-,, shift-down 默认
提高推理强度 | alt-., shift-up | 聊天 increase_reasoning_effort 提高推理强度 配置“提高推理强度”操作的快捷键。 alt-., shift-up 默认
上一个权限模式 | 未绑定 | 聊天 previous_permission_mode 上一个权限模式 配置“上一个权限模式”操作的快捷键。 未绑定 默认
下一个权限模式 | 未绑定 | 聊天 next_permission_mode 下一个权限模式 配置“下一个权限模式”操作的快捷键。 未绑定 默认
